# NN_Reactions

./: CMakeLists.txt  README.md  main.cpp  make_plots.sh  plot.gnu
results/: nudist_n2n_u235.res  nudist_n2n_u238.res  nudist_n3n_u235.res  nudist_n3n_u238.res
